<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="no">no</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_save">Save</string>
    <string name="text_edit">Edit Message</string>
    <string name="post_text">Post Text</string>
    <string name="text_post_save">Save</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add</string>
    <string name="video">Video</string>

    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s published new post</string>
    <string name="notification_error_title" />
    <string name="notification_error_text" />
    <string name="empty_posts">Empty posts</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="new_posts">New posts</string>
    <string name="post_image">Post image</string>

    <string name="clear">Clear</string>
    <string name="photo_pick_error">Photo pick error</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>

    <string name="error_invalid_image">Opened image error</string>
    <string name="error_invalid_image_url">Invalid image URL error</string>
    <string name="error_not_an_image">It is not image error</string>


    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Sign_In">Sign in</string>
    <string name="sign_in">Sign in</string>


</resources>