<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/barrierGroup"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content, save"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:constraint_referenced_ids="image_edit, text_edit, cancel, group_barrier"
        app:layout_constraintTop_toTopOf="@+id/barrierGroup"
        android:visibility="gone" />


    <EditText
        android:id="@+id/text_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_edit"
        android:inputType="text"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:importantForAutofill="no"
        android:cursorVisible="false"
        android:editable="false"
        app:layout_constraintTop_toTopOf="@+id/barrierGroup"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintStart_toEndOf="@id/image_edit"
        app:layout_constraintEnd_toStartOf="@+id/cancel"

        tools:ignore="Deprecated"
        />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_edit"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintStart_toEndOf="@+id/text_edit"
        app:layout_constraintTop_toBottomOf="@id/group"
        app:srcCompat="@drawable/baseline_cancel_24" />

    <ImageButton
        android:id="@+id/image_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_edit"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toStartOf="@+id/text_edit"
        app:layout_constraintTop_toBottomOf="@+id/group"
        app:srcCompat="@drawable/baseline_edit_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/group_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="top"
        app:constraint_referenced_tags="content,save"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_text"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@id/text_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
         />

       <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/text_post_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_launcher_save_foreground"
         />

</androidx.constraintlayout.widget.ConstraintLayout>


