<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_post"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            app:layout_constraintVertical_bias="0.573"
            app:layout_constraintVertical_chainStyle="spread"
            tools:layout_editor_absoluteX="109dp"
            tools:text="@sample/assets.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:layout_editor_absoluteX="214dp"
            tools:text="@sample/assets.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/baseline_more_vert_24"
            style="@style/Widget.AppTheme.MenuButton" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, published, menu"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/barrierBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierTop"
            tools:text="@sample/assets.json/data/content" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/like"
            app:icon="@drawable/ic_like_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrierBottom"
            tools:checked="@sample/assets.json/data/likedByMe"
            tools:text="@sample/assets.json/data/likes"
            style="@style/Widget.AppTheme.LikeButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            app:icon="@drawable/ic_launcher_share_foreground"
            app:layout_constraintStart_toEndOf="@id/likes"
            app:layout_constraintTop_toTopOf="@+id/barrierBottom"
            tools:text="@sample/assets.json/data/shares"
            style="@style/Widget.AppTheme.ShareButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/visibiluty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_launcher_visibility_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrierBottom"
            tools:text="@sample/assets.json/data/visibility"
            style="@style/Widget.AppTheme.VisibilityButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>